Resolved Overlapping and root division error

--- a/src/app.css
+++ b/src/app.css
@@ -1,20 +1,21 @@
+
 #app {
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
-    height: 100vh;
+    height: 1000px;
 	width: 100%;
 	background-image: url(assets/app-cover4.jpg);
 	background-size: cover;
-	background-position: center;
+	background-position: bottom;
 	
 
 }
 
 #searchBar {
     position: absolute;
-    top: 6px;
+    top: 15px;
     width: 90%;
     height: 40px;
     background-color: cadetblue
@@ -23,7 +24,7 @@
 
 #results {
     position: absolute;
-    top: 60px;
+    top: 80px;
     display: grid;
     grid-auto-flow: row;
     justify-content: space-evenly;
